chore(github): changes workflow names

--- a/.github/workflows/bdt-fe.yml
+++ b/.github/workflows/bdt-fe.yml
@@ -72,7 +72,7 @@ jobs:
       REPORTS_DISTRIBUTION: ${{ secrets.REPORTS_DISTRIBUTION }}
 
   pagespeed:
-    name: 🧐 PageSpeed Insights
+    name: 🧐 PageSpeed
     needs: build_deploy
     uses: ./.github/workflows/test-psi.yml
     secrets:
