ci(github): updates workflow/job naming

--- a/.github/workflows/bdt-fe.yml
+++ b/.github/workflows/bdt-fe.yml
@@ -23,7 +23,7 @@ env:
 jobs:
   
   build_deploy:
-    name: 📦 Build & Deploy
+    name: 🚀 Build & Deploy
     uses: ./.github/workflows/bd-fe.yml
     secrets:
       AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
@@ -61,7 +61,7 @@ jobs:
       REPORTS_DISTRIBUTION: ${{ secrets.REPORTS_DISTRIBUTION }}
 
   lighthouse:
-    name: 🧐 Performance
+    name: 🎭 Performance
     needs: build_deploy
     uses: ./.github/workflows/test-lighthouse.yml
     secrets:
@@ -72,7 +72,7 @@ jobs:
       REPORTS_DISTRIBUTION: ${{ secrets.REPORTS_DISTRIBUTION }}
 
   pagespeed:
-    name: 🧐 PageSpeed
+    name: 📈 Metrics
     needs: build_deploy
     uses: ./.github/workflows/test-psi.yml
     secrets:
