chore(testing): updates local backstop refs

--- a/_ci/backstop/package.json
+++ b/_ci/backstop/package.json
@@ -12,7 +12,7 @@
     "pm2": "node ./node_modules/pm2/bin/pm2",
     "ref": "ENVIRONMENT=\"$ENV\" backstop reference --config=backstop.config.js",
     "remote": "ENVIRONMENT=\"$ENV\" backstop remote --config=backstop.config.js",
-    "serve": "http-server ../../front/build -p 8080",
+    "serve": "http-server -b -S -p 443 -a local.dgrebb.com -C ../../front/local.dgrebb.com.crt -K ../../front/local.dgrebb.com.key --cors='*' ../../front/build",
     "start": "ENVIRONMENT=\"$ENV\" pm2 start ecosystem.config.js && pm2 monit",
     "stop": "pm2 stop backstop && pm2 delete backstop && kill -9 $( lsof -i:3000 -t )",
     "test": "ENVIRONMENT=\"$ENV\" backstop test --config=backstop.config.js",
