chore(github): adds `needs` array to cleanup workflow
https://github.com/actions/runner/issues/2120#issuecomment-1406793500

--- a/.github/workflows/bdt-fe.yml
+++ b/.github/workflows/bdt-fe.yml
@@ -79,7 +79,7 @@ jobs:
 
   cleanup:
     name: 🧹 Cleanup
-    needs: backstop
+    needs: [build_deploy, backstop, lighthouse, pagespeed]
     runs-on: ubuntu-latest
     concurrency:
       group: build-deploy
