chore(github): uses previous sha instead of current commit

--- a/.github/workflows/test-psi.yml
+++ b/.github/workflows/test-psi.yml
@@ -18,7 +18,7 @@ env:
   BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
 
 jobs:
-  lighthouse:
+  psi:
     name: 📊 PSI
     runs-on: ubuntu-latest
 
@@ -82,16 +82,13 @@ jobs:
           
       - name: Delete Previous deployments
         uses: actions/github-script@v6
-        env:
-          GITHUB_SHA_HEAD: ${{ github.event.pull_request.head.sha }}
         with:
           github-token: ${{ secrets.GH_WORKFLOW_TOKEN }}
           script: |
-            const { GITHUB_SHA_HEAD } = process.env
             const deployments = await github.rest.repos.listDeployments({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              sha: GITHUB_SHA_HEAD
+              sha: context.sha
             });
             await Promise.all(
               deployments.data.map(async (deployment) => {
