--- a/.github/workflows/bdt-fe.yml
+++ b/.github/workflows/bdt-fe.yml
@@ -1,4 +1,4 @@
-name: 🚜 Build, Deploy, and Test 
+name: 🚜 Build, Deploy, and Test
 run-name: "🚜 ${{ github.ref_name == 'main' && 'PRD' || 'STG' }} - Build, Deploy, and Test - ${{ github.event_name == 'pull_request' && format('PR #{0}: {1}', github.event.pull_request.number, github.event.pull_request.title) || format('latest {0}', github.ref_name) }}"
 
 on:
@@ -21,7 +21,6 @@ env:
   BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
 
 jobs:
-  
   build_deploy:
     name: 🚀 Build & Deploy
     uses: ./.github/workflows/bd-fe.yml
@@ -47,6 +46,7 @@ jobs:
       PUBLIC_ENV: ${{ secrets.PUBLIC_ENV }}
       SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
       DISTRIBUTION: ${{ secrets.DISTRIBUTION }}
+      GH_WORKFLOW_TOKEN: ${{ secrets.GH_WORKFLOW_TOKEN }}
 
   backstop:
     name: 🧐 Visual Regression
@@ -70,6 +70,7 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: ${{ secrets.AWS_REGION }}
       REPORTS_DISTRIBUTION: ${{ secrets.REPORTS_DISTRIBUTION }}
+      GH_WORKFLOW_TOKEN: ${{ secrets.GH_WORKFLOW_TOKEN }}
 
   pagespeed:
     name: 📈 Metrics
@@ -77,3 +78,38 @@ jobs:
     uses: ./.github/workflows/test-psi.yml
     secrets:
       PSI_APIKEY: ${{ secrets.PSI_APIKEY }}
+      GH_WORKFLOW_TOKEN: ${{ secrets.GH_WORKFLOW_TOKEN }}
+
+  cleanup:
+    name: 🧹 Cleanup
+    needs: [build_deploy, backstop, lighthouse, pagespeed]
+    runs-on: ubuntu-latest
+    concurrency:
+      group: build-deploy
+      cancel-in-progress: true
+    steps:
+      - name: Delete Previous deployments
+        uses: actions/github-script@v6
+        with:
+          github-token: ${{ secrets.GH_WORKFLOW_TOKEN }}
+          script: |
+            const deployments = await github.rest.repos.listDeployments({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              sha: context.sha
+            });
+            await Promise.all(
+              deployments.data.map(async (deployment) => {
+                await github.rest.repos.createDeploymentStatus({ 
+                  owner: context.repo.owner, 
+                  repo: context.repo.repo, 
+                  deployment_id: deployment.id, 
+                  state: 'inactive' 
+                });
+                return github.rest.repos.deleteDeployment({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  deployment_id: deployment.id
+                });
+              })
+            );
