--- a/.github/workflows/test-lighthouse.yml
+++ b/.github/workflows/test-lighthouse.yml
@@ -15,6 +15,8 @@ on:
         required: true
       REPORTS_DISTRIBUTION:
         required: true
+      GH_WORKFLOW_TOKEN:
+        required: true
 
 env:
   BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
@@ -97,3 +99,29 @@ jobs:
           AWS_REGION: ${{ secrets.AWS_REGION }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          
+      - name: Delete Previous deployments
+        uses: actions/github-script@v6
+        with:
+          github-token: ${{ secrets.GH_WORKFLOW_TOKEN }}
+          script: |
+            const deployments = await github.rest.repos.listDeployments({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              sha: context.sha
+            });
+            await Promise.all(
+              deployments.data.map(async (deployment) => {
+                await github.rest.repos.createDeploymentStatus({ 
+                  owner: context.repo.owner, 
+                  repo: context.repo.repo, 
+                  deployment_id: deployment.id, 
+                  state: 'inactive' 
+                });
+                return github.rest.repos.deleteDeployment({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  deployment_id: deployment.id
+                });
+              })
+            );
