--- a/.github/workflows/test-backstop.yml
+++ b/.github/workflows/test-backstop.yml
@@ -110,8 +110,7 @@ jobs:
           cd _ci/backstop
           FAIL_TABLE=$(./_utils/parse-report.sh ${{ vars.REPORTS_DOMAIN }} $REPORT_PATH)
           echo "# Backstop Summary" >> $GITHUB_STEP_SUMMARY
-          echo "<a href=\"http://${{ vars.REPORTS_DOMAIN }}/backstop/html_report/gh-$REPORT_PATH/\" target=\"_blank\">BackstopJS Report</a>" >> $GITHUB_STEP_SUMMARY
-          echo "<a href=\"http://${{ vars.REPORTS_DOMAIN }}/lighthouse/\" target=\"_blank\">Lighthouse Report</a>" >> $GITHUB_STEP_SUMMARY
+          echo "## 📋 <a href=\"http://${{ vars.REPORTS_DOMAIN }}/backstop/html_report/gh-$REPORT_PATH/\" target=\"_blank\">View Report</a>" >> $GITHUB_STEP_SUMMARY
           echo $FAIL_TABLE >> $GITHUB_STEP_SUMMARY
 
       - name: 🔥 Bummer. Uploading Failed Artifacts!
