fix(github): manually installs playwright prior to running backstop

--- a/.github/workflows/test-backstop.yml
+++ b/.github/workflows/test-backstop.yml
@@ -62,7 +62,7 @@ jobs:
             _ci/backstop/node_modules
 
       - name: ↧ Install & Patch
-        run: cd _ci/backstop && npm ci
+        run: cd _ci/backstop && npm ci && npx playwright install --with-deps
 
       - name: 🔥 Warmup Cache
         run: ./_ci/_utils/warmup.sh
