--- a/.github/workflows/bdt-fe.yml
+++ b/.github/workflows/bdt-fe.yml
@@ -22,7 +22,7 @@ env:
 
 jobs:
   build_deploy:
-    name: 🚀 Build & Deploy
+    name: 🚀 
     uses: ./.github/workflows/bd-fe.yml
     secrets:
       AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
@@ -49,7 +49,7 @@ jobs:
       GH_WORKFLOW_TOKEN: ${{ secrets.GH_WORKFLOW_TOKEN }}
 
   backstop:
-    name: 🧐 Visual Regression
+    name: 👀 
     needs: build_deploy
     uses: ./.github/workflows/test-backstop.yml
     secrets:
@@ -61,7 +61,7 @@ jobs:
       REPORTS_DISTRIBUTION: ${{ secrets.REPORTS_DISTRIBUTION }}
 
   lighthouse:
-    name: 🎭 Performance
+    name: 🕯️
     needs: build_deploy
     uses: ./.github/workflows/test-lighthouse.yml
     secrets:
@@ -73,7 +73,7 @@ jobs:
       GH_WORKFLOW_TOKEN: ${{ secrets.GH_WORKFLOW_TOKEN }}
 
   pagespeed:
-    name: 📈 Metrics
+    name: 📈
     needs: build_deploy
     uses: ./.github/workflows/test-psi.yml
     secrets:
