--- a/.github/workflows/test-backstop.yml
+++ b/.github/workflows/test-backstop.yml
@@ -1,4 +1,4 @@
-name: 🙈 Run BackstopJS
+name: 🙈 BackstopJS
 run-name: "${{ github.ref_name == 'main' && 'PRD' || 'STG' }} - BackstopJS ${{ github.event_name == 'pull_request' && format('PR #{0}: {1} on ', github.event.pull_request.number, github.event.pull_request.title) || format('on latest {0}', github.ref_name) }}"
 
 on:
@@ -33,7 +33,7 @@ env:
 
 jobs:
   backstop:
-    name: 🙈 BackstopJS
+    name: 🧐 Test
     runs-on: ubuntu-latest
 
     concurrency:
