chore(backstop): adjusts failure summary output vars

--- a/.github/workflows/test-backstop.yml
+++ b/.github/workflows/test-backstop.yml
@@ -74,8 +74,6 @@ jobs:
           REPORT_PATH: ${{ github.ref_name == 'main' && 'prod' || 'stg' }}
         run: |
           cd _ci/backstop && ENV=$DEPLOY_ENV npm run test.gh
-          FAIL_TABLE=$(./_utils/parse-report.sh ${{ vars.REPORTS_DOMAIN }} $REPORT_PATH)
-          echo $FAIL_TABLE >> $GITHUB_ENV
 
       - name: Summarize Failures
         if: steps.backstop.outcome != 'success'
@@ -85,7 +83,8 @@ jobs:
           cd _ci/backstop
           echo "# Backstop Summary" >> $GITHUB_STEP_SUMMARY
           echo "## 📋 <a href=\"http://${{ vars.REPORTS_DOMAIN }}/backstop/html_report/gh-$REPORT_PATH/\" target=\"_blank\">View Report</a>" >> $GITHUB_STEP_SUMMARY
-          echo ${{ env.FAIL_TABLE }} >> $GITHUB_STEP_SUMMARY
+          FAIL_TABLE=$(./_utils/parse-report.sh ${{ vars.REPORTS_DOMAIN }} $REPORT_PATH)
+          echo $FAIL_TABLE >> $GITHUB_STEP_SUMMARY
 
       - name: Summarize Success
         if: steps.backstop.outcome == 'success'
