test(backstop): increases wait time on navigate from posts test

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,7 +10,7 @@ env:
 
 jobs:
   lint:
-    name: 💅 Prettier
+    name: ≅ Lint
     runs-on: ubuntu-latest
     environment:
       name: ${{ github.ref_name == 'main' && 'prd' || 'stg' }}
